
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2021 OCT 06a
  * in model/emfield/_Epotential-Bfixed/emfield.c and model/emfield/_Epotential/emfield.c
    - added find_DeltaVk_drift_from_mu()
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - renamed _Vk_perp_to_bdry() to _Vk_drift_perp_to_bdry()
    - in _Vk_drift_perp_to_bdry(), now calls find_Vk_drift() and 
      find_unit_vector_normal_to_boundary_plane()
  * in model/share/emfield_share.c
    - added find_Vk_drift()
  * in bin/MHD_earth_entry2.wrp
    - made improvements
    

2021 OCT 03a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - got rid of the last 4 post processing variables related to cesium
  * in model/fluid/doc/Transport_Equations/report.tex
    - in model/fluid/doc/Transport_Equations/report.tex, cleaned up the text about the
      surface injection boundary condition
  * in model/share/fluid_share.c
    - in write_disc_fluid_template(), set default zetaD to 0.0 instead of 1.0
     

2021 OCT 01a
  * in cycle/res/_generic/res.c
    - changed YSTARDH_SECONDORDER to FALSE 
    - changed TVDLIMITER to LIMITER_MINMOD
  * in model/chem/_Cs_Air_Plasma_15s/chem.c
    - in add_dW_dx_Cesium(), fixed a bug: when CESIUMIONIZATIONMODEL was not set to 
      CESIUMIONIZATIONMODEL_LENARD1964, the linearization of W was not correct
    - in add_dW_dx_Cesium(), fixed a bug: when CESIUMRECOMBINATIONMODEL was not set to
      CESIUMRECOMBINATIONMODEL_LENARD1964, the linearization of W was not correct
      

2021 SEP 28a
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in update_bdry_wall(), rewrote the code related to wwall[specneutral]; this was done
      for clarity and should not change the model
      

2021 SEP 26a