@@ -414,7 +414,7 @@ No. & Reaction\tnote{(b)} & Forward          & Backward    & $A$, $\textrm{cm}^3
 \end{tabular}
 \begin{tablenotes}
 \item[{a}] The universal gas constant $R$ must be set to 1.9872	cal/K$\cdot$mol. $A$ has units of $\textrm{cm}^3\cdot(\textrm{mole}\cdot \textrm{s})^{-1}\cdot \textrm{K}^{-n}$. $E$ has units of cal/mole. The rate is given by $A T^n \exp(-E/RT).$
-\item[{b}] $\rm M_1=N,~NO$;~ $\rm M_2=O,~NO,~O_2$;~ $\rm M_3=O_2,~N_2$;~ $\rm M_4=O,~N,~NO$.
+\item[{b}] $\rm M_1=N,~O,~N^+,~O^+$; $\rm M_2=N_2,~O_2,~NO,~N_2^+,~O_2^+,~NO^+$; $\rm M_3= N,~O,~NO,~N^+,~O^+$; $\rm M_4=N_2,O_2,N_2^+,~O_2^+,~NO^+$.
 \item[{c}] The forward reactions for 10, 11, and 12 are taken from \cite{pf:2007:boyd}. The backward reactions for 10, 11 are found using BOLSIG+ \cite{psst:2005:hagelaar,jgr:1974:walls}. The backward reaction for reaction 12 is found using BOLSIG+ \cite{psst:2005:hagelaar,jap:2021:abdoulanziz}. The backward reactions for 26--30 are taken from \cite{nasa:1973:dunn}. Reaction 8 is taken from \cite{jcp:1997:bose} and reaction 9 from \cite{jcp:1996:bose}. The forward reactions 26--30 are found using BOLSIG+ \cite{psst:2005:hagelaar,pcpp:1992:morgan}. Reactions 24 and 25 are taken from \cite{jtht:1993:park}. Other reactions are taken from \cite{book:1990:park}.
 \end{tablenotes}
 \label{tab:parentpark}
